--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -66,6 +67,7 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="NeY-Ov-fHj" id="3KT-hb-90l"/>
                                     <outlet property="peopleImageView" destination="WkC-0u-dbV" id="agI-IP-CWJ"/>
+                                    <segue destination="U5U-Fr-rEz" kind="show" id="jnJ-ey-XLM"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -79,6 +81,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YZR-bm-qfM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1012" y="-158.77061469265368"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="WNw-A3-Jfm">
+            <objects>
+                <viewController id="U5U-Fr-rEz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZeK-dT-QPy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="wdP-fg-myh"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WeV-wf-k69" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1847" y="-159"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lLv-2l-Plv">
