--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -91,28 +91,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="t10-sf-QCh">
-                                <rect key="frame" x="20" y="121.5" width="335" height="424"/>
+                                <rect key="frame" x="20" y="156" width="335" height="411"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CxV-yY-QHY">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="325.5"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="CxV-yY-QHY" secondAttribute="height" multiplier="308:299" id="4ME-US-EBl"/>
-                                        </constraints>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CxV-yY-QHY">
+                                        <rect key="frame" x="0.0" y="0.0" width="335" height="312.5"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksF-sD-BRO">
-                                        <rect key="frame" x="0.0" y="333.5" width="335" height="33.5"/>
+                                        <rect key="frame" x="0.0" y="320.5" width="335" height="33.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmT-zS-yfO">
-                                        <rect key="frame" x="0.0" y="375" width="335" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="362" width="335" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdn-9H-pZC">
-                                        <rect key="frame" x="0.0" y="403.5" width="335" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="390.5" width="335" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -122,8 +119,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="t10-sf-QCh" firstAttribute="leading" secondItem="wdP-fg-myh" secondAttribute="leading" constant="20" id="7Kn-TE-kxe"/>
                             <constraint firstItem="t10-sf-QCh" firstAttribute="centerX" secondItem="ZeK-dT-QPy" secondAttribute="centerX" id="eA7-oo-ddH"/>
-                            <constraint firstItem="t10-sf-QCh" firstAttribute="centerY" secondItem="ZeK-dT-QPy" secondAttribute="centerY" id="yGg-J9-ux6"/>
+                            <constraint firstItem="t10-sf-QCh" firstAttribute="top" secondItem="wdP-fg-myh" secondAttribute="top" constant="40" id="k46-aI-eRi"/>
+                            <constraint firstItem="wdP-fg-myh" firstAttribute="bottom" secondItem="t10-sf-QCh" secondAttribute="bottom" constant="100" id="ssL-7F-2HV"/>
+                            <constraint firstItem="wdP-fg-myh" firstAttribute="trailing" secondItem="t10-sf-QCh" secondAttribute="trailing" constant="20" id="yUb-be-CeZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wdP-fg-myh"/>
                     </view>
