--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -10,22 +10,48 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Users-->
         <scene sceneID="AZq-QP-5oc">
             <objects>
-                <tableViewController id="KiR-2H-Buf" sceneMemberID="viewController">
+                <tableViewController id="KiR-2H-Buf" customClass="UserProfileTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="VuT-PO-jsT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="6Y1-Uq-bSd">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserProfileCell" rowHeight="85" id="6Y1-Uq-bSd" customClass="UserProfileTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="85"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Y1-Uq-bSd" id="hQu-k1-a2V">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="84.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FVJ-PT-P2X">
+                                            <rect key="frame" x="8" y="0.0" width="398" height="84.5"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ePm-Pd-UXd">
+                                                    <rect key="frame" x="0.0" y="0.0" width="89" height="84.5"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X8a-YD-yN8">
+                                                    <rect key="frame" x="97" y="0.0" width="301" height="84.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="FVJ-PT-P2X" firstAttribute="leading" secondItem="hQu-k1-a2V" secondAttribute="leading" constant="8" id="3aA-zq-3oi"/>
+                                        <constraint firstAttribute="trailing" secondItem="FVJ-PT-P2X" secondAttribute="trailing" constant="8" id="Luv-vS-ATz"/>
+                                        <constraint firstItem="FVJ-PT-P2X" firstAttribute="top" secondItem="hQu-k1-a2V" secondAttribute="top" id="Tcv-b0-uCC"/>
+                                        <constraint firstAttribute="bottom" secondItem="FVJ-PT-P2X" secondAttribute="bottom" id="nv7-Kw-jmP"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="userImageView" destination="ePm-Pd-UXd" id="iWF-Ph-rEd"/>
+                                    <outlet property="userLabel" destination="X8a-YD-yN8" id="KcC-jv-Vqx"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -33,25 +59,69 @@
                             <outlet property="delegate" destination="KiR-2H-Buf" id="Hdq-NT-ljz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="l4G-ii-0ou"/>
+                    <navigationItem key="navigationItem" title="Users" id="l4G-ii-0ou"/>
                     <connections>
-                        <segue destination="TUB-Hq-SIx" kind="show" id="mpJ-4y-3dz"/>
+                        <segue destination="TUB-Hq-SIx" kind="show" identifier="ShowUserDetail" id="mpJ-4y-3dz"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6K2-cz-hpt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="876.81159420289862" y="-6.0267857142857144"/>
         </scene>
-        <!--View Controller-->
+        <!--User Detail-->
         <scene sceneID="Gn3-vZ-21T">
             <objects>
-                <viewController id="TUB-Hq-SIx" sceneMemberID="viewController">
+                <viewController title="User Detail" id="TUB-Hq-SIx" customClass="UserProfileDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Enl-sO-gMY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oSu-lG-RqM">
+                                <rect key="frame" x="82" y="88" width="250" height="328.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C37-IF-Km1">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="243"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="WZO-h9-QKJ"/>
+                                            <constraint firstAttribute="height" constant="243" id="yPb-0T-1F0"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSd-ex-r9g">
+                                        <rect key="frame" x="0.0" y="251" width="250" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sx0-1m-W7U">
+                                        <rect key="frame" x="0.0" y="279.5" width="250" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NcX-5u-qbp">
+                                        <rect key="frame" x="0.0" y="308" width="250" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lfb-FJ-Pe5" firstAttribute="trailing" secondItem="oSu-lG-RqM" secondAttribute="trailing" constant="82" id="8KE-lN-hDM"/>
+                            <constraint firstItem="lfb-FJ-Pe5" firstAttribute="bottom" secondItem="oSu-lG-RqM" secondAttribute="bottom" constant="445.5" id="BxH-GT-Pqj"/>
+                            <constraint firstItem="oSu-lG-RqM" firstAttribute="top" secondItem="lfb-FJ-Pe5" secondAttribute="top" id="EwG-gA-C51"/>
+                            <constraint firstItem="oSu-lG-RqM" firstAttribute="leading" secondItem="lfb-FJ-Pe5" secondAttribute="leading" constant="82" id="gdq-ya-NpH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="lfb-FJ-Pe5"/>
                     </view>
+                    <connections>
+                        <outlet property="emailLabel" destination="sx0-1m-W7U" id="LE4-TE-Aqw"/>
+                        <outlet property="imageView" destination="C37-IF-Km1" id="ZLl-FP-qTf"/>
+                        <outlet property="phoneLabel" destination="NcX-5u-qbp" id="a9N-FD-eHG"/>
+                        <outlet property="userNameLabel" destination="cSd-ex-r9g" id="Up8-SA-ciC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XzA-Mi-06K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
