--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -84,8 +84,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="oSu-lG-RqM">
-                                <rect key="frame" x="82" y="88" width="250" height="328.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="oSu-lG-RqM">
+                                <rect key="frame" x="82" y="88" width="250" height="400.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C37-IF-Km1">
                                         <rect key="frame" x="0.0" y="0.0" width="250" height="243"/>
@@ -95,19 +95,19 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSd-ex-r9g">
-                                        <rect key="frame" x="0.0" y="251" width="250" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="275" width="250" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sx0-1m-W7U">
-                                        <rect key="frame" x="0.0" y="279.5" width="250" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="327.5" width="250" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NcX-5u-qbp">
-                                        <rect key="frame" x="0.0" y="308" width="250" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="380" width="250" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -117,10 +117,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="lfb-FJ-Pe5" firstAttribute="trailing" secondItem="oSu-lG-RqM" secondAttribute="trailing" constant="82" id="8KE-lN-hDM"/>
-                            <constraint firstItem="lfb-FJ-Pe5" firstAttribute="bottom" secondItem="oSu-lG-RqM" secondAttribute="bottom" constant="445.5" id="BxH-GT-Pqj"/>
-                            <constraint firstItem="oSu-lG-RqM" firstAttribute="top" secondItem="lfb-FJ-Pe5" secondAttribute="top" id="EwG-gA-C51"/>
-                            <constraint firstItem="oSu-lG-RqM" firstAttribute="leading" secondItem="lfb-FJ-Pe5" secondAttribute="leading" constant="82" id="gdq-ya-NpH"/>
+                            <constraint firstItem="lfb-FJ-Pe5" firstAttribute="trailing" secondItem="oSu-lG-RqM" secondAttribute="trailing" constant="82" id="5Ie-l4-1i2"/>
+                            <constraint firstItem="oSu-lG-RqM" firstAttribute="top" secondItem="lfb-FJ-Pe5" secondAttribute="top" id="8Pt-be-f6g"/>
+                            <constraint firstItem="oSu-lG-RqM" firstAttribute="leading" secondItem="lfb-FJ-Pe5" secondAttribute="leading" constant="82" id="PAV-85-cMR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lfb-FJ-Pe5"/>
                     </view>
